--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,17 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   google_sign_in: ^6.3.0
+  hive: ^2.2.3
+  flutter_bloc: ^9.1.0
+  intl: ^0.20.2
+  hive_flutter: ^1.1.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
