--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.20.2
   hive_flutter: ^1.1.0
   equatable: ^2.0.7
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
