--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   hive_flutter: ^1.1.0
   equatable: ^2.0.7
   table_calendar: ^3.2.0
+  url_launcher: ^6.3.1
+  uuid: ^4.5.1
+  timezone: ^0.10.0
+  flutter_local_notifications: ^19.1.0
 
 dev_dependencies:
   flutter_test:
