--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   uuid: ^4.5.1
   timezone: ^0.10.0
   flutter_local_notifications: ^19.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
